# picotls

./: CMakeLists.txt
certs/: MyCertificate.crt  MyKey.key
client/: CMakeLists.txt  client.c
picotlsvs/bcrypt-test/: bcrypt-test.vcxproj
picotlsvs/fusiontest/: fusiontest.vcxproj
picotlsvs/picotls-bcrypt/: picotls-bcrypt.vcxproj
picotlsvs/picotls-core/: picotls-core.vcxproj
picotlsvs/picotls-esni/: picotls-esni.vcxproj
picotlsvs/picotls-fusion/: picotls-fusion.vcxproj
picotlsvs/picotls-minicrypto/: picotls-minicrypto.vcxproj
picotlsvs/picotls-minicrypto-deps/: picotls-minicrypto-deps.vcxproj
picotlsvs/picotls-openssl/: picotls-openssl.vcxproj
picotlsvs/picotlsvs/: picotlsvs.vcxproj
picotlsvs/ptlsbench/: ptlsbench.vcxproj
picotlsvs/testopenssl/: testopenssl.vcxproj
server/: CMakeLists.txt  server.c
t/: cli.c
